# server/docs/swagger.json
@@ -1,7 +1,7 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "This is WISMED V-HUB backend-api server. Updated@ 03-31-2023 12:32:09",
+        "description": "This is WISMED V-HUB backend-api server. Updated@ 04-01-2023 17:50:03",
         "title": "WISMED V-HUB API",
         "contact": {
             "name": "API Support"
@@ -447,6 +447,77 @@
                     },
                     "400": {
                         "description": "Fail - file param is incorrect"
+                    },
+                    "500": {
+                        "description": "Fail - internal error"
+                    }
+                }
+            }
+        },
+        "/api/submit/template": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Submit"
+                ],
+                "summary": "get Post template for submission reference.",
+                "responses": {
+                    "200": {
+                        "description": "OK - get template successfully"
+                    }
+                }
+            }
+        },
+        "/api/submit/upload": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Submit"
+                ],
+                "summary": "submit a Post by filling its template.",
+                "parameters": [
+                    {
+                        "description": "filled Post template json file",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "type": "string",
+                        "description": "followee Post ID (empty when submitting a new post)",
+                        "name": "followee",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK - submit successfully"
+                    },
+                    "400": {
+                        "description": "Fail - incorrect Post format"
                     },
                     "500": {
                         "description": "Fail - internal error"
